--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,6 +5,7 @@
   height: 100%;
   background-image: url("https://i.pinimg.com/originals/98/55/3f/98553fc00b499b84b3a47d15c436f7ba.jpg");
  //background-color: chocolate;
+ //background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;;
