--- a/src/app/signin/signin.page.html
+++ b/src/app/signin/signin.page.html
@@ -1,7 +1,8 @@
 
 <ion-content class="background" [fullscreen]="true" style="background: #f1f2f5;">
-  <div class="homepage" style="width: 100%; height: 45%; background-image: url('https://i.pinimg.com/originals/98/55/3f/98553fc00b499b84b3a47d15c436f7ba.jpg');
-  border-bottom-left-radius: 200px ;border-bottom-right-radius: 200px;margin-top: 0px;">
+  <div class="homepage" style="width: 100%; height: 45%; 
+  background-image: url('https://i.pinimg.com/originals/98/55/3f/98553fc00b499b84b3a47d15c436f7ba.jpg');
+  background-repeat: no-repeat; border-bottom-left-radius: 200px ;border-bottom-right-radius: 200px;margin-top: 0px;">
    <div class="amapiano">
      <div class="half">
        <br><br>
@@ -29,11 +30,11 @@
     <div style="text-align: left; --background: gainsboro;margin-top: 40%;justify-content: center; display: flex; flex-direction: column;
     margin-left: 10%; margin-top: -2%;">
       <br><br>
-      <ion-input shape="round" type="text" style="width: 300px; padding:20px; border-radius: 20px; margin-bottom: 26px;
+      <ion-input shape="round" type="text" style="width: 320px; padding:20px; border-radius: 20px; margin-bottom: 26px;
       box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.12);" placeholder="&nbsp;&nbsp;&nbsp;Email:"></ion-input>
-      <ion-input shape="round" type="password" style="width: 300px; border-radius: 20px; margin-bottom: 26px;
+      <ion-input shape="round" type="password" style="width: 320px; border-radius: 20px; margin-bottom: 26px;
       box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.12);" placeholder="&nbsp;&nbsp;&nbsp;Password:"></ion-input>
-      <ion-button shape="round" color="clear" style="width: 300px;color: black; background-color:white" ><b>SIGN UP</b></ion-button>
+      <ion-button shape="round" color="clear" style="width: 320px;color: black; background-color:white" ><b>SIGN UP</b></ion-button>
       <br>
       <p id="woza1" style="color: black; font-size: xx-small;margin-left: 36%;margin-top: 30px;"><u>New Account?</u></p>
   </div>
